[gd_scene load_steps=45 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_28.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://d0v3xiw4lwv4l" path="res://Scene/Level/light.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://bvk0irn7m7yo8" path="res://Art/Level/Game3Level/Level_3_3/chl.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cml5teyicu3r3" path="res://Art/Level/Game3Level/Level_3_3/chlfloor.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dlg6un4mbcfl5" path="res://Art/Level/Game3Level/Level_3_3/flooradd.png" id="6"]
[ext_resource type="Texture2D" uid="uid://caw4d2i8ml6wa" path="res://Art/Level/Game3Level/Level_3_3/stage_1.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cwuynbipifml6" path="res://Art/Level/Game3Level/Level_3_3/SpecialEffect_2.png" id="8"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(3791, 395)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(475.266, 476)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1567.63, 558)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(1007, 1042)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(1064.5, 1042)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(41, 1042)
script = null

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(1225.5, 1042)
script = null

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(721.75, 1420)
script = null

[sub_resource type="GDScript" id="9"]
script/source = "extends Node2D
@onready var animation_player: AnimationPlayer = $AnimationPlayer

var IsLight: bool
func _physics_process(delta: float) -> void:
	if IsLight:
		animation_player.play(\"Light2\")
	else:
		animation_player.play(\"Light1\")

func _on_area_2d_area_entered(area: Area2D) -> void:
	if IsLight:
		IsLight = false
	else:
		IsLight = true
	Global.add_mr_hurt($Area2D,Vector2(0,0))
"

[sub_resource type="GDScript" id="10"]
script/source = "extends Node2D
@onready var animation_player: AnimationPlayer = $AnimationPlayer

var IsLight: bool
func _physics_process(delta: float) -> void:
	if IsLight:
		animation_player.play(\"Light2\")
	else:
		animation_player.play(\"Light1\")

func _on_area_2d_area_entered(area: Area2D) -> void:
	if IsLight:
		IsLight = false
	else:
		IsLight = true
	Global.add_mr_hurt($Area2D,Vector2(0,0))
"

[sub_resource type="GDScript" id="11"]
script/source = "extends Node2D
@onready var animation_player: AnimationPlayer = $AnimationPlayer

var IsLight: bool
func _physics_process(delta: float) -> void:
	if IsLight:
		animation_player.play(\"Light2\")
	else:
		animation_player.play(\"Light1\")

func _on_area_2d_area_entered(area: Area2D) -> void:
	if IsLight:
		IsLight = false
	else:
		IsLight = true
	Global.add_mr_hurt($Area2D,Vector2(0,0))
"

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "8" )
region = Rect2(0, 0, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "8" )
region = Rect2(431, 0, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "8" )
region = Rect2(862, 0, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "8" )
region = Rect2(1293, 0, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource( "8" )
region = Rect2(0, 144, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource( "8" )
region = Rect2(431, 144, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource( "8" )
region = Rect2(862, 144, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource( "8" )
region = Rect2(1293, 144, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource( "8" )
region = Rect2(0, 288, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource( "8" )
region = Rect2(431, 288, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource( "8" )
region = Rect2(862, 288, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource( "8" )
region = Rect2(1293, 288, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource( "8" )
region = Rect2(0, 432, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource( "8" )
region = Rect2(431, 432, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource( "8" )
region = Rect2(862, 432, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource( "8" )
region = Rect2(1293, 432, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource( "8" )
region = Rect2(0, 576, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource( "8" )
region = Rect2(431, 576, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource( "8" )
region = Rect2(862, 576, 431, 144)
script = null

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource( "8" )
region = Rect2(1293, 576, 431, 144)
script = null

[sub_resource type="SpriteFrames" id="32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}, {
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}, {
"duration": 1.0,
"texture": SubResource( "16" )
}, {
"duration": 1.0,
"texture": SubResource( "17" )
}, {
"duration": 1.0,
"texture": SubResource( "18" )
}, {
"duration": 1.0,
"texture": SubResource( "19" )
}, {
"duration": 1.0,
"texture": SubResource( "20" )
}, {
"duration": 1.0,
"texture": SubResource( "21" )
}, {
"duration": 1.0,
"texture": SubResource( "22" )
}, {
"duration": 1.0,
"texture": SubResource( "23" )
}, {
"duration": 1.0,
"texture": SubResource( "24" )
}, {
"duration": 1.0,
"texture": SubResource( "25" )
}, {
"duration": 1.0,
"texture": SubResource( "26" )
}, {
"duration": 1.0,
"texture": SubResource( "27" )
}, {
"duration": 1.0,
"texture": SubResource( "28" )
}, {
"duration": 1.0,
"texture": SubResource( "29" )
}, {
"duration": 1.0,
"texture": SubResource( "30" )
}, {
"duration": 1.0,
"texture": SubResource( "31" )
}],
"loop": true,
"name": &"player",
"speed": 20.0
}]
script = null

[sub_resource type="RectangleShape2D" id="33"]
size = Vector2(392.404, 103.167)
script = null

[sub_resource type="Animation" id="34"]
resource_name = "floordown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround/floor_2/Stage1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.959931]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackGround/floor_2/Stage2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.436332]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("wall/floor2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.959931]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("wall/floor3:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.436332]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BackGround/floor_2/Stage1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4029, 551), Vector2(4029, 551), Vector2(4029, 1200)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ANplayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BackGround/floor_2/Stage2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4502, 551), Vector2(4502, 551), Vector2(4502, 1200)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("wall/floor2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4027.37, 448.75), Vector2(4027.37, 448.75), Vector2(4027.37, 1200)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("wall/floor3:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4502, 448.875), Vector2(4502, 448.875), Vector2(4502, 1200)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Player:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Player/Area2D/CollisionShape2D:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"move_playerto_boss"
}]
}
script = null

[sub_resource type="Animation" id="35"]
resource_name = "floorup"
script = null

[sub_resource type="AnimationLibrary" id="36"]
_data = {
"floordown": SubResource( "34" ),
"floorup": SubResource( "35" )
}
script = null

[node name="Level_28" instance=ExtResource( "1" )]
script = ExtResource( "2" )
metadata/_edit_vertical_guides_ = [4266.0, 4702.0]

[node name="floor" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(1894.5, 604.5)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="floor2" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(4027.37, 645)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="floor3" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(5048.18, 686)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(1602.5, -30)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(2782.75, -38)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(3520, -16)
shape = SubResource( "6" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="8"]
position = Vector2(5212.25, -29)
shape = SubResource( "7" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="9"]
position = Vector2(3178.13, -211)
shape = SubResource( "8" )
disabled = true
metadata/_edit_lock_ = true

[node name="jg" type="Node2D" parent="." index="5"]
z_index = -2

[node name="Light" parent="jg" index="0" instance=ExtResource( "3" )]
position = Vector2(470, 313)
metadata/_edit_lock_ = true

[node name="Light2" parent="jg" index="1" instance=ExtResource( "3" )]
position = Vector2(1350, 313)
metadata/_edit_lock_ = true

[node name="Light3" parent="jg" index="2" instance=ExtResource( "3" )]
position = Vector2(2600, 313)
script = SubResource( "9" )
metadata/_edit_lock_ = true

[node name="Light4" parent="jg" index="3" instance=ExtResource( "3" )]
position = Vector2(3800, 313)
script = SubResource( "10" )
metadata/_edit_lock_ = true

[node name="Light5" parent="jg" index="4" instance=ExtResource( "3" )]
position = Vector2(4600, 313)
script = SubResource( "11" )
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="Chl" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2348, 295)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="Chlfloor" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(1424, 551)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="Flooradd" type="Sprite2D" parent="BackGround/floor_2" index="1"]
position = Vector2(3319, 551)
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="Stage1" type="Sprite2D" parent="BackGround/floor_2" index="2"]
position = Vector2(4029, 551)
texture = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="Stage2" type="Sprite2D" parent="BackGround/floor_2" index="3"]
position = Vector2(4502, 551)
texture = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="Player" type="AnimatedSprite2D" parent="." index="11"]
visible = false
position = Vector2(4285, 583)
scale = Vector2(2.6, 3)
sprite_frames = SubResource( "32" )
animation = &"player"
autoplay = "player"
frame_progress = 0.4021
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Player" index="0"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D" index="0"]
position = Vector2(-7.35571, 11.25)
shape = SubResource( "33" )
disabled = true
metadata/_edit_lock_ = true

[node name="ANplayer" type="AnimationPlayer" parent="." index="12"]
speed_scale = 3.0
libraries = {
"": SubResource( "36" )
}

[node name="exit" parent="." index="13"]
position = Vector2(4465, 338)
metadata/_edit_lock_ = true

[connection signal="body_entered" from="Player/Area2D" to="." method="_on_area_2d_body_entered" flags=18]
